fix: weekview overflow on larger screens

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,24 +20,3 @@
 .rdp-button:hover:not([disabled]):not(.rdp-day_selected) {
   background-color: #f3f4f6;
 }
-
-@keyframes comet {
-  0% {
-      transform: translate(-50%, -50%) rotate(0deg) translateX(150px) rotate(0deg);
-      opacity: 1;
-  }
-  50% {
-      opacity: 0.5;
-  }
-  100% {
-      transform: translate(-50%, -50%) rotate(360deg) translateX(150px) rotate(-360deg);
-      opacity: 1;
-  }
-}
-
-.animate-comet {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  animation: comet 8s linear infinite;
-}
